php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #20987 Problem with curl_setopt and client certificates
Submitted: 2002-12-13 04:48 UTC Modified: 2002-12-21 12:07 UTC
From: dnorrell at gmx dot net Assigned:
Status: Closed Package: cURL related
PHP Version: 4.3.0RC3 OS: Redhat Linux 7.2
Private report: No CVE-ID: None
 [2002-12-13 04:48 UTC] dnorrell at gmx dot net
It appears that if you try to specify a client certficate for an HTTPS connection using the CURLOPT_SSLCERT option, nothing gets set. An example would be:

curl_setopt($ch, CURLOPT_SSLCERT, "client.pem");

A quick look at the PHP source seems to indicate that this option is omitted from the curl_setopt function. If I add it it works fine.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-12-20 02:08 UTC] daniel at haxx dot se
Basicly, dnorrell wants this little patch applied and I think (s)he is right:


diff -u -r1.2 interface.c
--- interface.c 14 Nov 2002 11:41:24 -0000      1.2
+++ interface.c 20 Dec 2002 08:07:16 -0000
@@ -794,6 +794,7 @@
                case CURLOPT_USERAGENT:
                case CURLOPT_FTPPORT:
                case CURLOPT_COOKIE:
+               case CURLOPT_SSLCERT:
                case CURLOPT_COOKIEFILE:
                case CURLOPT_REFERER:
                case CURLOPT_INTERFACE:
 [2002-12-21 12:07 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.

Fixed in the 4.4.0 release (unstable branch), MFH to 4.3.0 is pending approval by the release manager.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 29 17:00:02 2026 UTC