Fixed bug #20987 (no handling for client certificates).